Fixed the rune image spilling over the screen side/width

--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,6 @@ html {
   height: 100vh;
 }
 
-.main-container {
-  width: 80%;
-  padding-right: 50px;
-  padding-left: 50px;
-}
 
 /* TITLE STYLING CLASS */
 .title {
